Fix top banner on mobile

--- a/themes/evolve/lessc/about-us.less
+++ b/themes/evolve/lessc/about-us.less
@@ -6,7 +6,7 @@
     #block-block-170{
         /* MOBILE BACKGROUND */
         @media @larger-phone-width-down{
-            background-image: url(http://localhost/sites/default/files/ABOUT-US/ABOUT-US-MOBILE.jpg)!important;
+            background-image: url(/sites/default/files/ABOUT-US/ABOUT-US-MOBILE.jpg)!important;
             -webkit-background-size: 100%!important;
             -moz-background-size: 100%!important;
             -o-background-size: 100%!important;
